bin_PROGRAMS = pigdo
pigdo_SOURCES = pigdo.c worker.c worker.h
pigdo_LDADD = libigdo/libigdo.a

noinst_LIBRARIES = libigdo/libigdo.a
libigdo_libigdo_a_SOURCES = \
    libigdo/decompress.c \
    libigdo/fetch.c \
    libigdo/jigdo.c \
    libigdo/jigdo-md5.c \
    libigdo/jigdo-template.c \
    libigdo/md5.c \
    libigdo/util.c \
    libigdo/config.h \
    libigdo/fetch.h \
    libigdo/jigdo-template.h \
    libigdo/md5.h \
    libigdo/decompress.h \
    libigdo/jigdo-md5.h \
    libigdo/jigdo.h \
    libigdo/util.h
